# ChemCraft

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  TODO.txt  a.out  cute  incasefile.cpp  main  tessss.cpp
Notes/: CMakeLists.txt  hshshsk.txt
config/: defaultConfig.json
include/: GUIDependencies.h  StdLibDependencies.h  UIGeneration.h  chemistry.h  compound.h  compoundRender.h  config.h  element.h  elementRender.h  graphics.h  molecules.h  render.h  utils.h  values.h
include/UI/: UIGeneration.h  error.h
include/chemistry/: compound.h  element.h  molecules.h  values.h
include/graphics/: EBO.h  VAO.h  VBO.h  camera.h  shader.h  texture.h
include/management/: management.h
include/objects/: bondObject.h  chargeObject.h  electronObject.h  elementObject.h  numberObject.h  signObject.h
include/render/: bondObject.h  callbacks.h  chargeObject.h  electronObject.h  elementObject.h  numberObject.h  render.h  signObject.h
includes/: element.h  values.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: CMakeLists.txt
lib/glm/: CMakeLists.txt
lib/imgui/: CmakeLists.txt
lib/json/: CMakeLists.txt  json.cpp
lib/nativefiledialog/: CMakeLists.txt  nfd_win.cpp
lib/stb_image/: CMakeLists.txt
shaders/: covalent.frag  covalent.vert  dative.frag  dative.vert  electron.frag  electron.vert  glowBond.frag  glowBond.vert  glowElectron.frag  glowElectron.vert  glowElement.frag  glowElement.vert  ionic.frag  ionic.vert  sign.frag  texture.vert
src/: MoleculeGeneration.cpp  UIGeneration.cpp  compound.cpp  compoundRender.cpp  config.cpp  element.cpp  elementRender.cpp  genuine.cpp  main.cpp  molecules.cpp  render.cpp  test.cpp  values.cpp  window.cpp
src/UI/: error.cpp  misc.cpp  sideMenu.cpp  topMenu.cpp
src/chemistry/: compound.cpp  element.cpp  molecules.cpp  values.cpp
src/graphics/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  shader.cpp  texture.cpp
src/management/: management.cpp
src/objects/: bondObject.cpp  chargeObject.cpp  electronObject.cpp  elementObject.cpp  numberObject.cpp  signObject.cpp
src/render/: bondObject.cpp  callbacks.cpp  chargeObject.cpp  electronObject.cpp  elementObject.cpp  numberObject.cpp  render.cpp  signObject.cpp
test/: ElementTests.cpp  test.cpp  window.cpp  windowppp.cpp
