file(GLOB NATIVEFILEDIALOGSOURCES "nfd_common.c")

if(WIN32)
    list(APPEND NATIVEFILEDIALOGSOURCES "nfd_win.cpp")
elseif(APPLE)
    enable_language(OBJC)
    list(APPEND NATIVEFILEDIALOGSOURCES "nfd_cocoa.m")
elseif(UNIX)
    list(APPEND NATIVEFILEDIALOGSOURCES "nfd_gtk.c" "nfd_zenity.c")
endif()

add_library(nativefiledialog STATIC ${NATIVEFILEDIALOGSOURCES})
target_include_directories(nativefiledialog PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

if(WIN32)
    target_compile_definitions(nativefiledialog PRIVATE _CRT_SECURE_NO_WARNINGS)
elseif(APPLE)
    find_library(COCOA_LIBRARY Cocoa REQUIRED)
    find_library(APPKIT_LIBRARY AppKit REQUIRED)
    find_library(COREFOUNDATION_LIBRARY CoreFoundation REQUIRED)
    target_link_libraries(nativefiledialog PUBLIC ${COCOA_LIBRARY} ${APPKIT_LIBRARY} ${COREFOUNDATION_LIBRARY})
elseif(UNIX)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)

    if(GTK3_FOUND)
        target_include_directories(nativefiledialog PUBLIC ${GTK3_INCLUDE_DIRS})
        target_link_libraries(nativefiledialog PUBLIC ${GTK3_LIBRARIES})
        target_compile_definitions(nativefiledialog PRIVATE NFD_USE_GTK)
    else()
        message(FATAL_ERROR "GTK3 not found for NativeFileDialog on Linux")
    endif()
endif()
